--- a/cabal.project
+++ b/cabal.project
@@ -2,6 +2,13 @@ packages: . hs2048
 
 index-state: 2024-09-29T15:37:55Z
 
+-- TODO ideally we'd move the code here in to that repository, and import this one
+-- but that's not really possible with the current experimental structure of this project
+source-repository-package
+  type: git
+  location: https://github.com/georgefst/picture-click-from-svg
+  tag: b0d42566d9ebc419c236dcc9aad802c634cd4153
+
 if arch(wasm32)
   -- https://github.com/haskellari/splitmix/pull/73
   source-repository-package
@@ -19,6 +26,12 @@ if arch(wasm32)
     type: git
     location: https://github.com/amesgen/jsaddle-wasm
     tag: be129c788f8ca1ea2e9cc1515397c1a46d02bb41
+
+  -- https://github.com/cdepillabout/pretty-simple/pull/107
+  source-repository-package
+      type: git
+      location: https://github.com/cdepillabout/pretty-simple
+      tag: 6fb9b281800ad045925c7344ceb9fd293d86c3b9
 
 package aeson
   flags: -ordered-keymap
